# langtrans

./: .dockerignore  .gitignore  Dockerfile  Documentation.md  Makefile  README.md  experiments.ipynb  poetry.toml  pyproject.toml
app/: config.py  main.py  models.py  schemas.py
app/templates/: index.html
scripts/: download_model.py
